# White_belt

./: CMakeLists.txt
Week_1/Task_1_1/: CMakeLists.txt
Week_1/Task_1_1/src/: main.cpp
Week_1/Task_1_2/: CMakeLists.txt
Week_1/Task_1_2/src/: main.cpp
Week_1/Task_1_3/: CMakeLists.txt
Week_1/Task_1_4/: CMakeLists.txt
Week_1/Task_1_5/: CMakeLists.txt
Week_1/Task_1_6/: CMakeLists.txt
Week_1/Task_1_7/: CMakeLists.txt
Week_1/Task_1_8/: CMakeLists.txt
Week_1/Task_1_9/: CMakeLists.txt
Week_2/Task_2_1/: CMakeLists.txt
Week_2/Task_2_10/: CMakeLists.txt
Week_2/Task_2_11/: CMakeLists.txt
Week_2/Task_2_12/: CMakeLists.txt
Week_2/Task_2_13/: CMakeLists.txt
Week_2/Task_2_14/: CMakeLists.txt
Week_2/Task_2_15/: CMakeLists.txt
Week_2/Task_2_16/: CMakeLists.txt
Week_2/Task_2_17/: CMakeLists.txt
Week_2/Task_2_2/: CMakeLists.txt
Week_2/Task_2_3/: CMakeLists.txt
Week_2/Task_2_4/: CMakeLists.txt
Week_2/Task_2_5/: CMakeLists.txt
Week_2/Task_2_6/: CMakeLists.txt
Week_2/Task_2_7/: CMakeLists.txt
Week_2/Task_2_8/: CMakeLists.txt
Week_2/Task_2_9/: CMakeLists.txt
Week_3/Task_3_1/: CMakeLists.txt
Week_3/Task_3_2/: CMakeLists.txt
Week_3/Task_3_3/: CMakeLists.txt
Week_3/Task_3_4/: CMakeLists.txt
Week_3/Task_3_5/: CMakeLists.txt
Week_3/Task_3_6/: CMakeLists.txt
Week_3/Task_3_7/: CMakeLists.txt
Week_3/Task_3_8/: CMakeLists.txt
Week_4/Task_4_1/: CMakeLists.txt
Week_4/Task_4_10/: CMakeLists.txt
Week_4/Task_4_11/: CMakeLists.txt
Week_4/Task_4_12/: CMakeLists.txt
Week_4/Task_4_2/: CMakeLists.txt
Week_4/Task_4_3/: CMakeLists.txt
Week_4/Task_4_4/: CMakeLists.txt
Week_4/Task_4_5/: CMakeLists.txt
Week_4/Task_4_6/: CMakeLists.txt  input.txt
Week_4/Task_4_7/: CMakeLists.txt  input.txt
Week_4/Task_4_8/: CMakeLists.txt
Week_4/Task_4_9/: CMakeLists.txt
(+42 files in other folders)
