cmake_minimum_required(VERSION 3.22 FATAL_ERROR)

project(white-belt VERSION 1.0.0 LANGUAGES CXX)

# Week 1
add_subdirectory(Week_1/Task_1_1)
add_subdirectory(Week_1/Task_1_2)
add_subdirectory(Week_1/Task_1_3)
add_subdirectory(Week_1/Task_1_4)
add_subdirectory(Week_1/Task_1_5)
add_subdirectory(Week_1/Task_1_6)
add_subdirectory(Week_1/Task_1_7)
add_subdirectory(Week_1/Task_1_8)
add_subdirectory(Week_1/Task_1_9)

# Week 2
add_subdirectory(Week_2/Task_2_1)
add_subdirectory(Week_2/Task_2_2)
add_subdirectory(Week_2/Task_2_3)
add_subdirectory(Week_2/Task_2_4)
add_subdirectory(Week_2/Task_2_5)
add_subdirectory(Week_2/Task_2_6)
add_subdirectory(Week_2/Task_2_7)
add_subdirectory(Week_2/Task_2_8)
add_subdirectory(Week_2/Task_2_9)
# add_subdirectory(Week_2/Task_2_10)
add_subdirectory(Week_2/Task_2_11)
add_subdirectory(Week_2/Task_2_12)
# add_subdirectory(Week_2/Task_2_13)
# add_subdirectory(Week_2/Task_2_14)
add_subdirectory(Week_2/Task_2_15)
add_subdirectory(Week_2/Task_2_16)
add_subdirectory(Week_2/Task_2_17)

# Week 3
add_subdirectory(Week_3/Task_3_1)
add_subdirectory(Week_3/Task_3_2)
add_subdirectory(Week_3/Task_3_3)
add_subdirectory(Week_3/Task_3_4)
# add_subdirectory(Week_3/Task_3_5)
add_subdirectory(Week_3/Task_3_6)
# add_subdirectory(Week_3/Task_3_7)
add_subdirectory(Week_3/Task_3_8)

# Week 4
add_subdirectory(Week_4/Task_4_1)
add_subdirectory(Week_4/Task_4_2)
add_subdirectory(Week_4/Task_4_3)
add_subdirectory(Week_4/Task_4_4)
# add_subdirectory(Week_4/Task_4_5)
add_subdirectory(Week_4/Task_4_6)
add_subdirectory(Week_4/Task_4_7)
add_subdirectory(Week_4/Task_4_8)
add_subdirectory(Week_4/Task_4_9)
add_subdirectory(Week_4/Task_4_10)
add_subdirectory(Week_4/Task_4_11)
add_subdirectory(Week_4/Task_4_12)
